--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+      "bcryptjs": "^2.4.3",
+      "body-parser": "^1.20.1",
+      "cors": "^2.8.5",
+      "jsonwebtoken": "^9.0.0",
+      "mongoos": "^0.0.1-security",
+      "mongoose": "^6.9.0"
+    
   }
 }
